feat: update JWT configuration and add refresh token endpoint; migrate properties to YAML